# www.0xd3ny5.dev

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml
alembic/versions/: 13c8b79b6e66_initial.py
backend/: requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 14840a2167d7_init.py
backend/config/: api_config.py  containers.py  paths.py
backend/src/: main.py
backend/src/application/: use_cases.py
backend/src/domain/: repositories.py  uow.py
backend/src/infrastructure/: blog.py  github.py  models.py  orm.py  repositories.py  uow.py
backend/src/presentation/: schemas.py
backend/src/presentation/routers/: admin.py  blog.py  index.py  pages.py  projects.py
backend/src/presentation/templates/: about.html  post.html
backend/src/presentation/templates/admin/: base_admin.html  dashboard.html  work_form.html
backend/src/presentation/templates/errors/: 500.html
backend/templates/: about.html  base.html  blog.html  index.html  work_detail.html
backend/templates/admin/: post_form.html
backend/templates/errors/: 404.html
backend/tests/: conftest.py  test_api.py  test_auth.py  test_blog_parser.py  test_blog_reader.py  test_entities.py  test_use_cases.py
scripts/: entrypoint.sh
